--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,4 +1,4 @@
-# GitPitch In-60-Seconds - A Very Short Tutorial.
+# A brief lesson in Python and FP
 #
 
 #
@@ -30,7 +30,7 @@ layout : center
 # Footnote Setting
 # Doc: https://gitpitch.com/docs/settings/footnote
 #
-footnote : "GitPitch - The Fastest Way From Idea To Presentation"
+footnote : "FP - keep you code safe and DRY!"
 
 #
 # Published Setting
@@ -42,6 +42,6 @@ published : true
 # Twitter Card Settings [Pro Only]
 # Doc: https://gitpitch.com/docs/settings/twitter-card
 #
-title : "GitPitch In 60 Seconds"
-description : "A short tutorial introducing the power and simplicity of GitPitch, the markdown presentation service on Git."
+title : "A brief lesson in Python and FP"
+description : "A short tutorial introducing the power and simplicity of FP to beginning Python programmers."
 thumbnail : https://gitpitch.com/gpimg/tutorial-thumb.png
