--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,47 +1,4 @@
-# A brief lesson in Python and FP
-#
-
-#
-# Theme Setting
-# Doc: https://gitpitch.com/docs/settings/theme
-#
-theme : simple
-
-#
-# Theme-Override Setting
-# Doc: https://gitpitch.com/docs/settings/custom-theme
-#
-theme-override: assets/css/PITCHME.css
-
-#
-# Logo Setting
-# https://gitpitch.com/docs/settings/logo
-#
-logo : assets/img/logo.png
-logo-postion : top-left
-
-#
-# Layout Setting
-# Doc: https://gitpitch.com/docs/settings/layout
-#
-layout : center
-
-#
-# Footnote Setting
-# Doc: https://gitpitch.com/docs/settings/footnote
-#
-footnote : "FP - keep you code safe and DRY!"
-
-#
-# Published Setting
-# Doc: https://gitpitch.com/docs/settings/published
-#
-published : true
-
-#
-# Twitter Card Settings [Pro Only]
-# Doc: https://gitpitch.com/docs/settings/twitter-card
-#
-title : "A brief lesson in Python and FP"
-description : "A short tutorial introducing the power and simplicity of FP to beginning Python programmers."
-thumbnail : https://gitpitch.com/gpimg/tutorial-thumb.png
+mathjax: TeX-MML-AM_HTMLorMML-full
+footnote: "EMAIL:  williamdemeo@gmail.com | URL: https://github.com/williamdemeo/ripon"
+theme-override: css/PITCHME.css
+revealjs: 3.4.1
