--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -2,3 +2,20 @@ mathjax: TeX-MML-AM_HTMLorMML-full
 footnote: "EMAIL:  williamdemeo@gmail.com | URL: https://github.com/williamdemeo/ripon"
 theme-override: css/PITCHME.css
 revealjs: 3.4.1
+
+# Layout
+layout : center-right
+
+# Look-and-Feel
+logo : assets/images/logo.png
+theme : night
+theme-override : assets/css/PITCHME.css
+highlight : ir-black
+
+# Behavior
+transition : none
+published : true
+
+# # Plugins
+# charts : true
+# mathjax : TeX-AMS_HTML-full
