--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -4,7 +4,7 @@ theme-override: css/PITCHME.css
 revealjs: 3.4.1
 
 # Layout
-layout : center-right
+layout : left
 
 # Look-and-Feel
 logo : assets/images/logo.png
